<resources>
    <string name="app_name">Task5</string>

    <!--    main主界面-->
    <string name="introduction">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用的dialog实现的注册界面，主界面还有一个侧滑，实现了沉浸式状态栏。</string>

    <!--    login登陆界面-->
    <string name="main_button">点击登陆</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="digits_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ?!=+-_.,</string>
    <string name="login_forgetPassword">忘记密码</string>
    <string name="login_register">立即注册</string>
    <string name="login">登陆</string>
    <string name="login_remember">记住密码</string>
    <string name="login_otherAccount">试试其他账号登陆</string>

    <!--    register注册界面-->
    <string name="hint_reenter_password">请重输密码</string>
    <string name="hint_input_phoneNumber">请输入手机号码</string>
    <string name="register">注册</string>
    <string name="agreement">同意用户协议</string>


    <!--    left menu侧滑界面-->
    <string name="left_menu1">关于作者</string>
    <string name="left_menu2">资源分享</string>
    <string name="left_menu3">捐赠</string>
    <string name="left_menu4">设置</string>
</resources>