<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998"
        app:shapeAppearanceOverlay="@style/roundCorner"
        app:srcCompat="@drawable/head_portrait"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_login_username"
        android:theme="@style/textInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.029999971">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="8dp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_input_password"
        android:theme="@style/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#C3000000">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits_password"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="8dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/login_forgetPassword"
        app:layout_constraintBottom_toBottomOf="@+id/button_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_signIn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="#00FFFFFF"
        android:text="@string/login_signIn"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:backgroundTint="@color/blue"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.16000003" />

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/login_otherAccount"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login_qq"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_ic_qq"
        app:layout_constraintBottom_toBottomOf="@+id/button_login_weChat"
        app:layout_constraintEnd_toStartOf="@+id/button_login_weChat"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/button_login_weChat"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_login_weChat"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/login_ic_wechat"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/button_login_qq"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>